fixed button alignment, layout alignment with grid

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,7 +188,6 @@ select:after {
 }
 
 #nine {
-    overflow: auto;
     padding: 0 8px 0 20px;
 }
 
